--- a/DeviceSettings/res/xml/main.xml
+++ b/DeviceSettings/res/xml/main.xml
@@ -117,4 +117,16 @@
             android:persistent="false"
             android:summary="@string/vibration_warning" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="camera"
+        android:title="@string/camera_title">
+        <SwitchPreference
+            android:key="always_on_camera_dialog"
+            android:title="@string/always_on_camera_dialog_title"
+            android:summaryOff="@string/always_on_camera_dialog_summary_off"
+            android:summaryOn="@string/always_on_camera_dialog_summary_on"
+            android:persistent="false" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
