overlay: We have a 'dash' charger

--- a/overlay-yaap/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-yaap/frameworks/base/core/res/res/values/config.xml
@@ -75,4 +75,7 @@
 
     <!-- Does the device have a notification/battery LED? -->
     <bool name="config_deviceHasLED">false</bool>
+
+    <!-- Whether device has dash charging support -->
+    <bool name="config_hasDashCharger">true</bool>
 </resources>
