overlay: add OP pickup sensor

--- a/overlay-yaap/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-yaap/frameworks/base/core/res/res/values/config.xml
@@ -78,4 +78,7 @@
 
     <!-- Whether device has dash charging support -->
     <bool name="config_hasDashCharger">true</bool>
+
+    <!-- Type of the pickup sensor used when config_dozePulsePickup is enabled. -->
+    <string name="config_dozePickupSensorType" translatable="false">oneplus.sensor.op_motion_detect</string>
 </resources>
