overlay: add kernelDimming is true

--- a/overlay-aosip/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-aosip/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -24,4 +24,7 @@
     <!-- Whether the binned brightness sensor reports a value of 0 on proximity
          near events -->
     <bool name="doze_brightness_sensor_reports_proximity">false</bool>
+    
+        <!-- FOD icon dim-->
+    <bool name="config_targetUsesInKernelDimming">true</bool>
 </resources>
