--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -23,5 +23,6 @@
          3 = right side
     -->
     <integer name="config_fingerprintSensorLocation">1</integer>
+     <bool name="config_show_min_refresh_rate_switch">true</bool>
 
 </resources>
