--- a/overlay/packages/apps/Settings/res/values/lineage_config.xml
+++ b/overlay/packages/apps/Settings/res/values/lineage_config.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2009 The Android Open Source Project
+<!-- Copyright (C) 2007 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,8 +14,8 @@
      limitations under the License.
 -->
 
-<resources>
-    <!-- Fingerprint -->
-    <dimen name="fingerprint_dot_radius">16dp</dimen>
-    <item name="fingerprint_sensor_location_fraction_y" type="fraction">80%</item>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
+    <!-- Whether to show min refresh rate in display settings -->
+    <bool name="config_show_min_refresh_rate_switch">true</bool>
 </resources>
