--- a/doze/res/xml/doze_settings.xml
+++ b/doze/res/xml/doze_settings.xml
@@ -22,8 +22,7 @@
         android:disableDependentsState="true"
         android:title="@string/ambient_display_always_on_title"
         android:summary="@string/ambient_display_always_on_summary"
-        android:persistent="false"
-	android:icon="@drawable/ic_eye" />
+        android:persistent="false" />
 
     <PreferenceCategory
         android:key="pickup_sensor"
@@ -33,16 +32,7 @@
             android:key="gesture_pick_up"
             android:defaultValue="false"
             android:title="@string/pick_up_gesture_title"
-            android:summary="@string/pick_up_gesture_summary"
-	    android:icon="@drawable/ic_pickup" />
-
-        <SwitchPreference
-            android:defaultValue="false"
-            android:disableDependentsState="true"
-            android:icon="@drawable/ic_raise"
-            android:key="gesture_raise_to_wake"
-            android:summary="@string/raise_to_wake_gesture_summary"
-            android:title="@string/raise_to_wake_gesture_title" />
+            android:summary="@string/pick_up_gesture_summary" />
 
     </PreferenceCategory>
 
