--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -199,7 +199,7 @@
     <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
 
      <!-- Allow automatic adjusting of the screen brightness while dozing in low power state. -->
-    <bool name="config_allowAutoBrightnessWhileDozing">true</bool>
+    <bool name="config_allowAutoBrightnessWhileDozing">false</bool>
 
     <!-- Control the behavior when the user long presses the home button.
         0 - Nothing
