sm8150-common: allow volume panel on left side
Signed-off-by: Matt Filetto <matt.filetto@gmail.com>
Change-Id: I9fb94ba04b148f375b75cd2647656538917e6bfa

--- a/overlay-lineage/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-lineage/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -20,6 +20,8 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
+    <!-- Allow devices override audio panel location to the left side -->
+    <bool name="config_audioPanelOnLeftSide">true</bool>
 
     <!-- Burn-in protection -->
     <bool name="config_statusBarBurnInProtection">true</bool>
